fix: increase z-index for header to improve visibility

--- a/apps/speedway/style.css
+++ b/apps/speedway/style.css
@@ -131,7 +131,7 @@ h1 {
   width: 120px; height: 34px;
   display: flex; align-items: center;
   transition: left 0.1s linear;
-  z-index: 2;
+  z-index: 5;
   pointer-events: none;
 }
 
